--- a/docs/man/share/man1/tfctl-mq.1
+++ b/docs/man/share/man1/tfctl-mq.1
@@ -1,44 +1,89 @@
-.TH TFCTL-MQ 1 "2025-09-25" "tfctl" "User Commands"
-.SH NAME
-tfctl-mq \- query modules in the HCP Terraform / Terraform Enterprise private registry
-.SH SYNOPSIS
-.B tfctl mq
-.RI [ options ]
-.P
-Common options are documented in
-.BR tfctl\-flags (7).
-.SH DESCRIPTION
-.B tfctl mq
-lists registry modules available to an organization on a given host.
-Use filters and attribute selection to shape results for automation and reporting.
-.SH OPTIONS
-.TP
-.BR \-\-host \fIHOST\fR
-HCP/TFE host (e.g. app.terraform.io or a private TFE hostname).
-.TP
-.BR \-\-org \fIORG\fR
-Organization name to scope queries.
-.TP
-See also global options in
-.BR tfctl (1)
-and
-.BR tfctl\-flags (7).
-.SH EXAMPLES
-.nf
-# List modules for an organization (text)
-tfctl mq --org {{organization_name}}
+.nh
+.TH tfctl mq — module registry query
+.PP
+Synopsis
 
-# Filter modules by name (contains) and return JSON
-tfctl mq --org {{organization_name}} --filter 'name@{{text}}' --output json
+.EX
+tfctl mq [RootDir] [options]
 
-# Filter modules by regex
-tfctl mq --org {{organization_name}} --filter 'name~{{pattern}}' --output json
+.EE
 
-# Use a specific Terraform Enterprise host
-tfctl mq --host {{tfe.example.com}} --org {{organization_name}}
-.fi
-.SH SEE ALSO
-.BR tfctl (1),
-.BR tfctl\-attrs (7),
-.BR tfctl\-filters (7),
-.BR tfctl\-flags (7)
+.PP
+Short description
+
+.PP
+Query the Module Registry (HCP/TFE) for available modules and metadata.
+
+.PP
+Flags and related docs
+
+.RS
+.IP \(bu 2
+See the common flag reference: Flags
+\[la]../flags.md\[ra]
+.IP \(bu 2
+Attributes: Attributes
+\[la]../attrs.md\[ra]
+.IP \(bu 2
+Filtering: Filters
+\[la]../filters.md\[ra]
+
+.RE
+
+.PP
+Flags
+
+.TS
+allbox;
+l l l l l 
+l l l l l .
+\fBFlag\fP	\fBAlias\fP	\fBDescription\fP	\fBDefault\fP	\fBNotes\fP
+\fB--attrs\fR	\fB-a\fR	T{
+Comma-separated list of attributes to include
+T}
+	(none)	Global flag
+\fB--color\fR	\fB-c\fR	Enable colored text output	false	Global flag
+\fB--filter\fR	\fB-f\fR	T{
+Comma-separated list of filters to apply
+T}
+	(none)	See Filters
+\[la]../filters.md\[ra]
+\fB--host\fR	\fB-h\fR	Host to use for queries	\fBapp.terraform.io\fR	Command-scoped via \fBNewHostFlag\fR
+\fB--org\fR	\fB-o\fR	Organization to query	(none)	Command-scoped via \fBNewOrgFlag\fR
+\fB--output\fR	\fB-o\fR	Output format (\fBtext\fR, \fBjson\fR, \fByaml\fR, \fBraw\fR)	\fBtext\fR	Global flag
+\fB--schema\fR		Dump the schema	false	Command helper
+\fB--sort\fR	\fB-s\fR	Attributes to sort by	(none)	Global flag
+\fB--titles\fR	\fB-t\fR	Show titles with text output	false	Global flag
+\fB--tldr\fR		Show tldr page (if installed)	false	Hidden unless \fBtldr\fR present
+.TE
+
+.PP
+Quick examples
+
+.EX
+# List registry modules
+ tfctl mq
+
+# Show common module attributes
+ tfctl mq --schema
+
+.EE
+
+.PP
+Notes
+
+.RS
+.IP \(bu 2
+\fBmq\fR may surface VCS and provider metadata for modules; use \fB--attrs\fR to extract specific values.
+
+.RE
+
+.PP
+See also
+
+.RS
+.IP \(bu 2
+Quickstart
+\[la]../quickstart.md\[ra]
+
+.RE
