--- a/docs/man/share/man1/tfctl-mq.1
+++ b/docs/man/share/man1/tfctl-mq.1
@@ -62,7 +62,7 @@ Quick examples
 
 .EX
 # List registry modules
- tfctl mq
+ tfctl mq --sort createdAt
 
 # Show common module attributes
  tfctl mq --schema
