switch from MIT to APL2.

--- a/docs/man/share/man1/tfctl.1
+++ b/docs/man/share/man1/tfctl.1
@@ -171,4 +171,4 @@ https://github.com/staranto/tfctlgo
 .SH AUTHOR
 Steve Taranto <staranto@gmail.com>
 .SH COPYRIGHT
-MIT License. See the project LICENSE file.
+Apache License 2.0. See the project LICENSE file.
