--- a/docs/man/share/man1/tfctl.1
+++ b/docs/man/share/man1/tfctl.1
@@ -169,6 +169,6 @@ tfctl svq --workspace {{workspace_name}} --limit 10 --output json
 .SH HOMEPAGE
 https://github.com/staranto/tfctlgo
 .SH AUTHOR
-Steve Taranto <staranto@gmail.com>
+Steve Taranto staranto@gmail.com
 .SH COPYRIGHT
 Apache License 2.0. See the project LICENSE file.
