--- a/docs/man/share/man1/tfctl-svq.1
+++ b/docs/man/share/man1/tfctl-svq.1
@@ -1,10 +1,11 @@
-'\" t
 .nh
 .TH tfctl svq — state version query
+.PP
 Synopsis
 
 .EX
 tfctl svq [RootDir] [options]
+
 .EE
 
 .PP
@@ -15,6 +16,8 @@ List and inspect state versions for a workspace or state backend. Useful for aud
 
 .PP
 Flags and related docs
+
+.RS
 .IP \(bu 2
 See the common flag reference: Flags
 \[la]../flags.md\[ra]
@@ -24,6 +27,8 @@ Attributes: Attributes
 .IP \(bu 2
 Filtering: Filters
 \[la]../filters.md\[ra]
+
+.RE
 
 .PP
 Flags
@@ -35,11 +40,13 @@ l l l l l .
 \fBFlag\fP	\fBAlias\fP	\fBDescription\fP	\fBDefault\fP	\fBNotes\fP
 \fB--attrs\fR	\fB-a\fR	T{
 Comma-separated list of attributes to include
-T}	(none)	Global flag
+T}
+	(none)	Global flag
 \fB--color\fR	\fB-c\fR	Enable colored text output	false	Global flag
 \fB--filter\fR	\fB-f\fR	T{
 Comma-separated list of filters to apply
-T}	(none)	See Filters
+T}
+	(none)	See Filters
 \[la]../filters.md\[ra]
 \fB--host\fR	\fB-h\fR	Host to use for queries	\fBapp.terraform.io\fR	Command-scoped via \fBNewHostFlag\fR
 \fB--limit\fR	\fB-l\fR	Limit state versions returned	99999	Command-scoped
@@ -50,7 +57,8 @@ T}	(none)	See Filters
 \fB--titles\fR	\fB-t\fR	Show titles with text output	false	Global flag
 \fB--workspace\fR	\fB-w\fR	T{
 Workspace to use (overrides backend)
-T}	(none)	Command flag
+T}
+	(none)	Command flag
 .TE
 
 .PP
@@ -62,15 +70,24 @@ Quick examples
 
 # Limit number of versions returned
  tfctl svq --limit 10
+
 .EE
 
 .PP
 Notes
+
+.RS
 .IP \(bu 2
 \fBsvq\fR integrates with backends that support state versioning (remote/HCP/TFE).
 
+.RE
+
 .PP
 See also
+
+.RS
 .IP \(bu 2
 Quickstart
 \[la]../quickstart.md\[ra]
+
+.RE
