--- a/docs/man/share/man1/tfctl-sq.1
+++ b/docs/man/share/man1/tfctl-sq.1
@@ -1,11 +1,10 @@
+'\" t
 .nh
 .TH tfctl sq — state query
-.PP
 Synopsis
 
 .EX
 tfctl sq [RootDir] [options]
-
 .EE
 
 .PP
@@ -16,8 +15,6 @@ Query Terraform/OpenTofu state files in a local IaC root. Supports listing resou
 
 .PP
 Flags and related docs
-
-.RS
 .IP \(bu 2
 See the common flag reference: Flags
 \[la]../flags.md\[ra]
@@ -27,8 +24,6 @@ Attributes: Attributes
 .IP \(bu 2
 Filtering: Filters
 \[la]../filters.md\[ra]
-
-.RE
 
 .PP
 Flags
@@ -40,41 +35,35 @@ l l l l l .
 \fBFlag\fP	\fBAlias\fP	\fBDescription\fP	\fBDefault\fP	\fBNotes\fP
 \fB--attrs\fR	\fB-a\fR	T{
 Comma-separated list of attributes to include
-T}
-	(none)	Global flag
-\fB--color\fR	\fB-c\fR	Enable colored text output	false	Global flag
+T}	(none)	Global flag
+\fB--chop\fR		T{
+Chop common resource prefix from names
+T}	false	sq-specific
+\fB--color\fR		Enable colored text output	false	Use \fB--no-color\fR to disable
 \fB--concrete\fR	\fB-k\fR	T{
 Only include concrete (managed) resources
-T}
-	false	sq-specific
+T}	false	sq-specific
 \fB--diff\fR		T{
 Show diff between state versions
-T}
-	false	sq-specific
-\fB--diff_filter\fR		Hidden, internal diff filter	\fBcheck_results\fR	Hidden / internal
+T}	false	sq-specific
 \fB--filter\fR	\fB-f\fR	T{
 Comma-separated list of filters to apply
-T}
-	(none)	See Filters
+T}	(none)	See Filters
 \[la]../filters.md\[ra]
-\fB--host\fR	\fB-h\fR	Host to use for queries	\fBapp.terraform.io\fR	Command-scoped via \fBNewHostFlag\fR
-\fB--limit\fR		Limit state versions returned	99999	sq-specific, hidden default
-\fB--noshort\fR		T{
-Include full resource name paths
-T}
-	false	sq-specific
+\fB--host\fR	\fB-h\fR	Host to use for queries	\fBapp.terraform.io\fR	Command-scoped
+\fB--org\fR		Organization to query	(none)	Command-scoped
 \fB--output\fR	\fB-o\fR	Output format (\fBtext\fR, \fBjson\fR, \fByaml\fR, \fBraw\fR)	\fBtext\fR	Global flag
-\fB--org\fR	\fB-o\fR	Organization to query	(none)	Command-scoped via \fBNewOrgFlag\fR
 \fB--passphrase\fR		Passphrase for encrypted state	(none)	T{
 sq-specific; falls back to TF_VAR_passphrase or interactive prompt
 T}
+\fB--short\fR		T{
+Include full resource name paths
+T}	false	Use \fB--no-short\fR to show full paths
 \fB--sort\fR	\fB-s\fR	Attributes to sort by	(none)	Global flag
-\fB--sv\fR		State version to query	\fB0\fR	sq-specific
-\fB--titles\fR	\fB-t\fR	Show titles with text output	false	Global flag
-\fB--workspace\fR	\fB-w\fR	T{
-Workspace to use (overrides backend)
-T}
-	(none)	Command flag
+\fB--sv\fR		State version to query	current	sq-specific
+\fB--titles\fR		Show titles with text output	false	Use \fB--no-titles\fR to disable
+\fB--tldr\fR		Show tldr page	false	Command-specific helper
+\fB--workspace\fR	\fB-w\fR	Workspace to use for query	(none)	Command-scoped
 .TE
 
 .PP
@@ -86,26 +75,17 @@ Quick examples
 
 # See state-specific flags (e.g., --concrete, --diff)
  tfctl sq --help
-
 .EE
 
 .PP
 Notes
-
-.RS
 .IP \(bu 2
 \fBsq\fR operates against an IaC root directory (defaults to CWD when not provided).
 .IP \(bu 2
 When using encrypted state, \fBsq\fR will prompt for a passphrase or use \fBTF_VAR_passphrase\fR\&.
 
-.RE
-
 .PP
 See also
-
-.RS
 .IP \(bu 2
 Quickstart
 \[la]../quickstart.md\[ra]
-
-.RE
