docs: ps, no-hungarian

--- a/docs/man/share/man1/tfctl-sq.1
+++ b/docs/man/share/man1/tfctl-sq.1
@@ -73,6 +73,9 @@ Quick examples
 # Query the current directory's state
  tfctl sq
 
+# Find resources with Hungarian notation naming convention
+ tfctl sq --filter hungarian=true
+
 # See state-specific flags (e.g., --concrete, --diff)
  tfctl sq --help
 .EE
